--- a/data/style/style.css
+++ b/data/style/style.css
@@ -5,12 +5,14 @@
 html,
 body {
   font-size: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
   width: 100%;
   height: 100vh;
   overflow: hidden;
   background: url(../images/bg/texture.png);
 }
+
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 /********** PC **********/
 @media screen and (min-width: 1024px) {
