--- a/data/style/team.css
+++ b/data/style/team.css
@@ -1,30 +1,23 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 .contents {
   font-size: 1.7rem;
-  
+  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
 .team_flex_container{
   display: flex;
+  flex-wrap: wrap; 
 }
 .team {
-  flex-direction: row;
-    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+    flex-direction: row;
     margin-left: 50px;
-    width: 100px;
-    background-color: rgba(21, 42, 100, 10);
+    width: 800px;
   }
-
   .team_name {
     margin-top: 8vh;
     height: 20vh;
     font-size: 3vmin;
     font-weight: 700;
     display:table;
-    
-  }
-  .team_name_box {
-    display:table-cell;
-    vertical-align:middle;
   }
   .team_title {
     width: 100%;
@@ -32,25 +25,48 @@
     display:table;
     font-size: 4vmin;
     font-weight: 700;
-    
   }
-  .team_title_box {
+  .middle_box {
     display:table-cell;
     vertical-align:middle;
   }
   .team_text {
-    color: #666666;
+    color: #999999;
     width: 500px;
     height: 20vh;
-    
+    margin-bottom: 28vh;
     font-size: 16px;
-    
-    display:block;
   }
-  .team2 {
-    
-    flex-direction: row;
-    margin-left: 50px;
-    width: 800px;
-    background-color: rgba(111, 42, 100, 10);
+  .team_film {
+    width: 100%;
+    margin-top: 13vh;
+    height: 15vh;
+    font-size: 3vmin;
+    font-weight: 700;
+    display:table;
+    text-align: right;
   }
+  .team_film_title {
+    width: 100%;
+    margin-top: 10vh;
+    height: 10vh;
+    display:table;
+    font-size: 4vmin;
+    font-weight: 700;
+    text-align: right;
+  }
+  .team_film_text {
+    color: #999999;
+    width: 100%;
+    height: 35vh;
+    margin-bottom: 13vh;
+    font-size: 16px;
+    text-align: right;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .video_team_film {
+    
+    height: 70vh;
+    }
