--- a/data/style/team.css
+++ b/data/style/team.css
@@ -3,14 +3,15 @@
   font-size: 1.7rem;
   font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
-.team_flex_container{
-  display: flex;
-  flex-wrap: wrap; 
-}
 .team {
     flex-direction: row;
     margin-left: 50px;
-    width: 800px;
+    /*width: 800px;*/
+  }
+  .team_1 {
+    flex-direction: row;
+    margin-left: 50px;
+    /*width: 800px;*/
   }
   .team_name {
     margin-top: 8vh;
@@ -25,6 +26,7 @@
     display:table;
     font-size: 4vmin;
     font-weight: 700;
+    margin-right: 40vw;
   }
   .middle_box {
     display:table-cell;
@@ -66,13 +68,101 @@
     align-items: flex-end;
   }
 
-  .video_team_film {
-    height: 70vh;
-    }
   
   #myVideo {
       height: 70vh;
-      min-width: 500px;
+      width: auto;
     }
-
   
+    .team_interactive {
+      width: 100%;
+      margin-top: 13vh;
+      height: 20vh;
+      font-size: 3vmin;
+      font-weight: 700;
+      display:table;
+      text-align: left;
+    }
+    .team_interactive_image_1{
+      height: 50vh;
+      margin-bottom: 13vh;
+    }
+    .team_interactive_title {
+      width: 100%;
+      margin-top: 13vh;
+      height: 6vh;
+      display:table;
+      font-size: 4vmin;
+      font-weight: 700;
+      text-align: left;
+    }
+    .team_interactive_text {
+      color: #999999;
+      width: 100%;
+      height: 30vh;
+      
+      font-size: 16px;
+      text-align: left;
+      display: flex;
+      align-items:center;
+    }
+    .team_interactive_image_2{
+      height: 35vh;
+      margin-bottom: 13vh;
+    }
+    
+  .border{
+    height: 96vh;
+    border-right: solid 1px #777;
+  }
+  .individual{
+    margin-left: 50px;
+    padding-right: 10px;
+      height: 30vh;
+      font-size: 16px;
+      text-align: left;
+      display: flex;
+      align-items:center;
+      height: 96vh;
+    border-right: solid 1px #777;
+  }
+
+  .team_indivi_image{
+    height: 35vh;
+    margin-top: 13vh;
+  }
+  .team_indivi_text {
+    width: 100%;
+    height: 35vh;
+    margin-bottom: 13vh;
+    text-align: left;
+  }
+
+  .team_indivi_text2 {
+    color: #999999;
+    width: 100%;
+    height: 30vh;
+    font-size: 16px;
+    margin-bottom: 13vh;
+    text-align: left;
+    display: flex;
+    align-items:center;
+  }
+  
+  .team_indivi_name {
+    width: 100%;
+    margin-top: 13vh;
+    height: 20vh;
+    font-size: 3vmin;
+    font-weight: 700;
+    display:table;
+    text-align: left;
+  }
+  .team_indivi_title {
+    width: 100%;
+    height: 6vh;
+    display:table;
+    font-size: 4vmin;
+    font-weight: 700;
+    text-align: left;
+  }
