--- a/data/style/team.css
+++ b/data/style/team.css
@@ -1,44 +1,88 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+
+@font-face {
+  src : url("../fonts/AppleSDGothicNeoL.ttf");
+  font-family: "Apple SD Gothic Neo L";
+}
+@font-face {
+  src : url("../fonts/AppleSDGothicNeoR.ttf");
+  font-family: "Apple SD Gothic Neo";
+}
+@font-face {
+  src : url("../fonts/AppleSDGothicNeoB.ttf");
+  font-family: "Apple SD Gothic Neo B";
+}
 .contents {
   font-size: 1.7rem;
-  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+  font-family: 'Apple SD Gothic Neo','Spoqa Han Sans Neo', 'sans-serif';
+}
+.team_margin {
+  flex-direction: row;
+  margin-left: 50px;
+  /*width: 800px;*/
 }
 .team {
     flex-direction: row;
     margin-left: 50px;
     /*width: 800px;*/
   }
-  .team_1 {
-    flex-direction: row;
-    margin-left: 50px;
-    /*width: 800px;*/
-  }
   .team_name {
-    margin-top: 8vh;
-    height: 20vh;
-    font-size: 3vmin;
-    font-weight: 700;
+    font-family: 'Bodoni 11'; 
+    width: 100%;
+    margin-top: 12vh;
+    height: 15vh;
+    font-size: 7vmin;
+    font-weight: 600;
     display:table;
   }
   .team_title {
+    /*margin-left: 60px;*/
     width: 100%;
-    height: 20vh;
+    height: 29vh;
     display:table;
-    font-size: 4vmin;
+    font-size: 5vmin;
     font-weight: 700;
-    margin-right: 40vw;
+    padding-top: 4vh;
+    margin-right: 150px;
+    margin-bottom: 4vh;
+    
   }
+  .concept{
+    color: #00000077;
+    font-size: 2vmin;
+    font-weight: 400;
+  }
+  .concept_text {
+    margin-top: 1vmin;
+    color: #999999;
+    width: 500px;
+    font-weight: 400;
+    font-size: 16px;
+  }
+  .team_members {
+    color: #999999;
+    width: 500px;
+    height: 16vh;
+    margin-bottom: 12vh;
+    /*margin-left: 120px;*/
+    font-weight: 600;
+    font-size: 16px;
+  }
+  .members_list{
+    list-style:none;
+  }
+  .members_go{
+    font-weight: 400;
+    margin-right: 10px;
+    float: left;
+  }
+  
   .middle_box {
     display:table-cell;
     vertical-align:middle;
   }
-  .team_text {
-    color: #999999;
-    width: 500px;
-    height: 20vh;
-    margin-bottom: 28vh;
-    font-size: 16px;
-  }
+  
+  
   .team_film {
     width: 100%;
     margin-top: 13vh;
@@ -116,9 +160,9 @@
     border-right: solid 1px #777;
   }
   .individual{
-    margin-left: 50px;
-    padding-right: 10px;
-      height: 30vh;
+    
+    margin-left: 200px;
+    padding-right: 30px;
       font-size: 16px;
       text-align: left;
       display: flex;
@@ -126,27 +170,45 @@
       height: 96vh;
     border-right: solid 1px #777;
   }
+  .individual_line{
+    margin-left: 50px;
+    
+    height: 70vh;
+    border-right: solid 1px #777;
+  }
+
 
   .team_indivi_image{
-    height: 35vh;
+    width: 100%;
     margin-top: 13vh;
   }
-  .team_indivi_text {
+  
+  .team_indivi {
+    margin-top: 4vh;;
     width: 100%;
-    height: 35vh;
+    height: 31vh;
     margin-bottom: 13vh;
     text-align: left;
   }
-
+  .team_indivi_text1 {
+    color: #000000;
+    width: 500px;
+    font-weight: 700;
+    font-size: 24px;
+  }
   .team_indivi_text2 {
-    color: #999999;
-    width: 100%;
-    height: 30vh;
+    margin-top: 5vh;
+    color: #000000;
+    width: 500px;
+    font-weight: 500;
     font-size: 16px;
-    margin-bottom: 13vh;
-    text-align: left;
-    display: flex;
-    align-items:center;
+  }
+  .team_indivi_text3 {
+    margin-top: 2vh;
+    color: #999999;
+    width: 500px;
+    font-weight: 400;
+    font-size: 16px;
   }
   
   .team_indivi_name {
