--- a/data/style/team.css
+++ b/data/style/team.css
@@ -16,109 +16,219 @@
   font-size: 1.7rem;
   font-family: 'Apple SD Gothic Neo','Spoqa Han Sans Neo', 'sans-serif';
 }
-.team_margin {
-  flex-direction: row;
-  margin-left: 50px;
-  /*width: 800px;*/
-}
-.team {
+@media screen and (min-width: 1024px) {
+  .team_margin {
     flex-direction: row;
     margin-left: 50px;
     /*width: 800px;*/
   }
-  .team_name {
-    font-family: 'Bodoni 11'; 
-    width: 100%;
-    margin-top: 12vh;
-    height: 15vh;
-    font-size: 7vmin;
-    font-weight: 600;
-    display:table;
-  }
-  .team_title {
-    /*margin-left: 60px;*/
-    width: 100%;
-    height: 29vh;
-    display:table;
-    font-size: 5vmin;
-    font-weight: 700;
-    padding-top: 4vh;
-    margin-right: 150px;
-    margin-bottom: 4vh;
-    
-  }
-  .concept{
-    color: #00000077;
-    font-size: 2vmin;
-    font-weight: 400;
-  }
-  .concept_text {
-    margin-top: 1vmin;
-    color: #999999;
-    width: 500px;
-    font-weight: 400;
-    font-size: 16px;
-  }
-  .team_members {
-    color: #999999;
-    width: 500px;
-    height: 16vh;
-    margin-bottom: 12vh;
-    /*margin-left: 120px;*/
-    font-weight: 600;
-    font-size: 16px;
-  }
-  .members_list{
-    list-style:none;
-  }
-  .members_go{
-    font-weight: 400;
-    margin-right: 10px;
-    float: left;
-  }
-  
-  .middle_box {
-    display:table-cell;
-    vertical-align:middle;
-  }
-  
-  
-  .team_film {
-    width: 100%;
-    margin-top: 13vh;
-    height: 15vh;
-    font-size: 3vmin;
-    font-weight: 700;
-    display:table;
-    text-align: right;
-  }
-  .team_film_title {
-    width: 100%;
-    margin-top: 10vh;
-    height: 10vh;
-    display:table;
-    font-size: 4vmin;
-    font-weight: 700;
-    text-align: right;
-  }
-  .team_film_text {
-    color: #999999;
-    width: 100%;
-    height: 35vh;
-    margin-bottom: 13vh;
-    font-size: 16px;
-    text-align: right;
-    display: flex;
-    align-items: flex-end;
-  }
-
-  
-  #myVideo {
-      height: 70vh;
-      width: auto;
+  .team {
+      flex-direction: row;
+      margin-left: 50px;
+      /*width: 800px;*/
     }
-  
-    .team_interactive {
+    .team_name {
+      font-family: 'Bodoni 11'; 
+      width: 100%;
+      margin-top: 12vh;
+      height: 15vh;
+      font-size: 7vmin;
+      font-weight: 600;
+      display:table;
+    }
+    .team_title {
+      /*margin-left: 60px;*/
+      width: 100%;
+      height: 29vh;
+      display:table;
+      font-size: 5vmin;
+      font-weight: 700;
+      padding-top: 4vh;
+      margin-right: 150px;
+      margin-bottom: 4vh;
+      
+    }
+    .concept{
+      color: #00000077;
+      font-size: 2vmin;
+      font-weight: 400;
+    }
+    .concept_text {
+      margin-top: 1vmin;
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+    .team_members {
+      color: #999999;
+      width: 500px;
+      height: 16vh;
+      margin-bottom: 12vh;
+      /*margin-left: 120px;*/
+      font-weight: 600;
+      font-size: 16px;
+    }
+    .members_list{
+      list-style:none;
+    }
+    .members_go{
+      font-weight: 400;
+      margin-right: 10px;
+      float: left;
+    }
+    
+    .middle_box {
+      display:table-cell;
+      vertical-align:middle;
+    }
+    
+    
+    .team_film {
+      width: 100%;
+      margin-top: 13vh;
+      height: 15vh;
+      font-size: 3vmin;
+      font-weight: 700;
+      display:table;
+      text-align: right;
+    }
+    .team_film_title {
+      width: 100%;
+      margin-top: 10vh;
+      height: 10vh;
+      display:table;
+      font-size: 4vmin;
+      font-weight: 700;
+      text-align: right;
+    }
+    .team_film_text {
+      color: #999999;
+      width: 100%;
+      height: 35vh;
+      margin-bottom: 13vh;
+      font-size: 16px;
+      text-align: right;
+      display: flex;
+      align-items: flex-end;
+    }
+
+    
+    #myVideo {
+        height: 70vh;
+        width: auto;
+      }
+    
+      .team_interactive {
+        width: 100%;
+        margin-top: 13vh;
+        height: 20vh;
+        font-size: 3vmin;
+        font-weight: 700;
+        display:table;
+        text-align: left;
+      }
+      .team_interactive_image_1{
+        height: 50vh;
+        margin-bottom: 13vh;
+      }
+      .team_interactive_title {
+        width: 100%;
+        margin-top: 13vh;
+        height: 6vh;
+        font-size: 4vmin;
+        font-weight: 700;
+        text-align: left;
+      }
+      .team_interactive_text {
+        margin-top: 2vh;
+        color: #999999;
+        width: 100%;
+        height: 28vh;
+        
+        font-size: 16px;
+        text-align: left;
+      }
+      .team_interactive_step{
+        width: 120vh;
+        height: 34vh;
+        margin-bottom: 13vh;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-end;
+      }
+      .step{
+        margin-right: 10px;
+        
+      }
+      .step img{
+        height: 20vh;
+        
+      }
+      
+    .border{
+      height: 96vh;
+      border-right: solid 1px #777;
+    }
+    .individual{
+      
+      margin-left: 200px;
+      padding-right: 30px;
+        font-size: 16px;
+        text-align: left;
+        display: flex;
+        align-items:center;
+        height: 96vh;
+      border-right: solid 1px #777;
+    }
+    .individual_line{
+      margin-left: 50px;
+      
+      height: 70vh;
+      border-right: solid 1px #777;
+    }
+
+
+    .team_indivi_image{
+      margin-top: 13vh;
+      height: 35vh;
+    }
+    
+    .team_indivi {
+      margin-top: 4vh;;
+      width: 100%;
+      
+      margin-bottom: 13vh;
+      text-align: left;
+    }
+    .team_indivi_text_eng {
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+    .team_indivi_text1 {
+      color: #000000;
+      width: 500px;
+      font-weight: 700;
+      font-size: 24px;
+    }
+    .team_indivi_text2 {
+      margin-top: 10px;
+      color: #000000;
+      width: 500px;
+      font-weight: 500;
+      font-size: 16px;
+    }
+    .team_indivi_text3 {
+      margin-top: 5px;
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+    
+    .team_indivi_name {
       width: 100%;
       margin-top: 13vh;
       height: 20vh;
@@ -127,104 +237,222 @@
       display:table;
       text-align: left;
     }
-    .team_interactive_image_1{
-      height: 50vh;
-      margin-bottom: 13vh;
-    }
-    .team_interactive_title {
+    .team_indivi_title {
       width: 100%;
-      margin-top: 13vh;
       height: 6vh;
       display:table;
       font-size: 4vmin;
       font-weight: 700;
       text-align: left;
     }
-    .team_interactive_text {
+}
+@media screen and (max-width: 1024px) {
+  .team_margin {
+    flex-direction: row;
+    margin-left: 50px;
+    /*width: 800px;*/
+  }
+  .team {
+      flex-direction: row;
+      margin-left: 50px;
+      /*width: 800px;*/
+    }
+    .team_name {
+      font-family: 'Bodoni 11'; 
+      width: 100%;
+      margin-top: 12vh;
+      height: 15vh;
+      font-size: 7vmin;
+      font-weight: 600;
+      display:table;
+    }
+    .team_title {
+      /*margin-left: 60px;*/
+      width: 100%;
+      height: 29vh;
+      display:table;
+      font-size: 5vmin;
+      font-weight: 700;
+      padding-top: 4vh;
+      margin-right: 150px;
+      margin-bottom: 4vh;
+      
+    }
+    .concept{
+      color: #00000077;
+      font-size: 2vmin;
+      font-weight: 400;
+    }
+    .concept_text {
+      margin-top: 1vmin;
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+    .team_members {
+      color: #999999;
+      width: 500px;
+      height: 16vh;
+      margin-bottom: 12vh;
+      /*margin-left: 120px;*/
+      font-weight: 600;
+      font-size: 16px;
+    }
+    .members_list{
+      list-style:none;
+    }
+    .members_go{
+      font-weight: 400;
+      margin-right: 10px;
+      float: left;
+    }
+    
+    .middle_box {
+      display:table-cell;
+      vertical-align:middle;
+    }
+    
+    
+    .team_film {
+      width: 100%;
+      margin-top: 13vh;
+      height: 15vh;
+      font-size: 3vmin;
+      font-weight: 700;
+      display:table;
+      text-align: right;
+    }
+    .team_film_title {
+      width: 100%;
+      margin-top: 10vh;
+      height: 10vh;
+      display:table;
+      font-size: 4vmin;
+      font-weight: 700;
+      text-align: right;
+    }
+    .team_film_text {
       color: #999999;
       width: 100%;
-      height: 30vh;
-      
-      font-size: 16px;
-      text-align: left;
-      display: flex;
-      align-items:center;
-    }
-    .team_interactive_image_2{
       height: 35vh;
       margin-bottom: 13vh;
+      font-size: 16px;
+      text-align: right;
+      display: flex;
+      align-items: flex-end;
+    }
+
+    
+    #myVideo {
+        height: 70vh;
+        width: auto;
+      }
+    
+      .team_interactive {
+        width: 100%;
+        margin-top: 13vh;
+        height: 20vh;
+        font-size: 3vmin;
+        font-weight: 700;
+        display:table;
+        text-align: left;
+      }
+      .team_interactive_image_1{
+        height: 50vh;
+        margin-bottom: 13vh;
+      }
+      .team_interactive_title {
+        width: 100%;
+        margin-top: 13vh;
+        height: 6vh;
+        font-size: 4vmin;
+        font-weight: 700;
+        text-align: left;
+      }
+      .team_interactive_text {
+        margin-top: 2vh;
+        color: #999999;
+        width: 100%;
+        height: 28vh;
+        
+        font-size: 16px;
+        text-align: left;
+      }
+      .team_interactive_step{
+        width: 120vh;
+        height: 34vh;
+        margin-bottom: 13vh;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-end;
+      }
+      .step{
+        margin-right: 10px;
+        
+      }
+      .step img{
+        height: 20vh;
+        
+      }
+      
+    .border{
+      height: 96vh;
+      border-right: solid 1px #777;
+    }
+    .individual{
+      
+      margin-left: 200px;
+      padding-right: 30px;
+        font-size: 16px;
+        text-align: left;
+        display: flex;
+        align-items:center;
+        height: 96vh;
+      border-right: solid 1px #777;
+    }
+    .individual_line{
+      margin-left: 50px;
+      
+      height: 70vh;
+      border-right: solid 1px #777;
+    }
+
+
+    .team_indivi_image{
+      margin-top: 13vh;
+      height: 35vh;
     }
     
-  .border{
-    height: 96vh;
-    border-right: solid 1px #777;
-  }
-  .individual{
-    
-    margin-left: 200px;
-    padding-right: 30px;
-      font-size: 16px;
+    .team_indivi {
+      margin-top: 4vh;
+      width: 100%;
+      height: 31vh;
+      margin-bottom: 13vh;
       text-align: left;
-      display: flex;
-      align-items:center;
-      height: 96vh;
-    border-right: solid 1px #777;
-  }
-  .individual_line{
-    margin-left: 50px;
-    
-    height: 70vh;
-    border-right: solid 1px #777;
-  }
-
-
-  .team_indivi_image{
-    width: 100%;
-    margin-top: 13vh;
-  }
-  
-  .team_indivi {
-    margin-top: 4vh;;
-    width: 100%;
-    height: 31vh;
-    margin-bottom: 13vh;
-    text-align: left;
-  }
-  .team_indivi_text1 {
-    color: #000000;
-    width: 500px;
-    font-weight: 700;
-    font-size: 24px;
-  }
-  .team_indivi_text2 {
-    margin-top: 5vh;
-    color: #000000;
-    width: 500px;
-    font-weight: 500;
-    font-size: 16px;
-  }
-  .team_indivi_text3 {
-    margin-top: 2vh;
-    color: #999999;
-    width: 500px;
-    font-weight: 400;
-    font-size: 16px;
-  }
-  
-  .team_indivi_name {
-    width: 100%;
-    margin-top: 13vh;
-    height: 20vh;
-    font-size: 3vmin;
-    font-weight: 700;
-    display:table;
-    text-align: left;
-  }
-  .team_indivi_title {
-    width: 100%;
-    height: 6vh;
-    display:table;
-    font-size: 4vmin;
-    font-weight: 700;
-    text-align: left;
-  }
+    }
+    .team_indivi_text_eng {
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+    .team_indivi_text1 {
+      color: #000000;
+      width: 500px;
+      font-weight: 700;
+      font-size: 24px;
+    }
+    .team_indivi_text2 {
+      color: #000000;
+      width: 500px;
+      font-weight: 500;
+      font-size: 16px;
+    }
+    .team_indivi_text3 {
+      color: #999999;
+      width: 500px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+}
