--- a/data/style/style.css
+++ b/data/style/style.css
@@ -4,11 +4,7 @@
 }
 html,
 body {
-  font-size: 10px;
   font-family: "Roboto", sans-serif;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
   background: url(../images/bg/texture.png);
 }
 a {
@@ -18,6 +14,12 @@ a {
 /********** PC **********/
 @media screen and (min-width: 1024px) {
   /********** 헤더 영역 **********/
+  body {
+    font-size: 10px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
   .header {
     width: 96vh;
     height: 60px;
@@ -107,7 +109,7 @@ a {
     overflow: auto;
     display: flex;
     align-items: center;
-    margin: 2vh 0 2vh 60px;
+    padding: 2vh 0 2vh 60px;
     font-size: 1.5rem;
     scroll-behavior: smooth;
   }
@@ -152,6 +154,21 @@ a {
     height: 3px;
     top: -1px;
     background: rgba(0, 0, 0, 0.1);
+  }
+}
+@media screen and (max-width: 1024px) {
+  body {
+    font-size: 10px;
+  }
+  .contents {
+    width: 100%;
+    background-color: aquamarine;
+    /*background: url(../images/bg/texture.png) local;*/
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow: auto;
+    font-size: 1.5rem;
+    scroll-behavior: smooth;
   }
 }
 
