--- a/data/style/team.css
+++ b/data/style/team.css
@@ -115,6 +115,8 @@
 
     
     #myVideo {
+        flex-direction: row;
+        margin-left: 50px;
         height: 70vh;
         width: auto;
       }
@@ -248,13 +250,17 @@
 }
 @media screen and (max-width: 1024px) {
   .team_margin {
-    flex-direction: row;
-    margin-left: 50px;
-    /*width: 800px;*/
+    flex-direction: column;
+    width: 100%;
   }
   .team {
-      flex-direction: row;
-      margin-left: 50px;
+    text-align: left;
+    flex-direction: column;
+    width: 100%;
+    white-space: normal;
+    box-sizing: border-box;
+    padding-left: 16px;
+    padding-right: 16px;
       /*width: 800px;*/
     }
     .team_name {
@@ -267,7 +273,6 @@
       display:table;
     }
     .team_title {
-      /*margin-left: 60px;*/
       width: 100%;
       height: 29vh;
       display:table;
@@ -284,15 +289,17 @@
       font-weight: 400;
     }
     .concept_text {
+      width: 100%;
       margin-top: 1vmin;
       color: #999999;
-      width: 500px;
       font-weight: 400;
       font-size: 16px;
+      white-space: normal;
+      box-sizing: border-box;
     }
     .team_members {
       color: #999999;
-      width: 500px;
+      width: 100%;
       height: 16vh;
       margin-bottom: 12vh;
       /*margin-left: 120px;*/
@@ -321,7 +328,6 @@
       font-size: 3vmin;
       font-weight: 700;
       display:table;
-      text-align: right;
     }
     .team_film_title {
       width: 100%;
@@ -330,7 +336,6 @@
       display:table;
       font-size: 4vmin;
       font-weight: 700;
-      text-align: right;
     }
     .team_film_text {
       color: #999999;
@@ -338,15 +343,13 @@
       height: 35vh;
       margin-bottom: 13vh;
       font-size: 16px;
-      text-align: right;
       display: flex;
       align-items: flex-end;
     }
 
     
     #myVideo {
-        height: 70vh;
-        width: auto;
+        width: 100vw;
       }
     
       .team_interactive {
@@ -359,7 +362,8 @@
         text-align: left;
       }
       .team_interactive_image_1{
-        height: 50vh;
+        width: 100%;
+        /* height: 50vh; */
         margin-bottom: 13vh;
       }
       .team_interactive_title {
@@ -380,7 +384,7 @@
         text-align: left;
       }
       .team_interactive_step{
-        width: 120vh;
+        width: 100%;
         height: 34vh;
         margin-bottom: 13vh;
         display: flex;
@@ -392,28 +396,25 @@
         
       }
       .step img{
-        height: 20vh;
-        
+        width: 100%;
       }
       
     .border{
       height: 96vh;
-      border-right: solid 1px #777;
+      border-bottom: solid 1px #777;
     }
     .individual{
-      
-      margin-left: 200px;
+      /*margin-left: 200px;*/
       padding-right: 30px;
-        font-size: 16px;
-        text-align: left;
-        display: flex;
-        align-items:center;
-        height: 96vh;
+      font-size: 16px;
+      text-align: left;
+      display: flex;
+      align-items:center;
+      height: 96vh;
       border-right: solid 1px #777;
     }
     .individual_line{
-      margin-left: 50px;
-      
+      /*margin-left: 50px;*/
       height: 70vh;
       border-right: solid 1px #777;
     }
@@ -421,7 +422,8 @@
 
     .team_indivi_image{
       margin-top: 13vh;
-      height: 35vh;
+      width: 100%;
+      height: auto;
     }
     
     .team_indivi {
@@ -433,25 +435,25 @@
     }
     .team_indivi_text_eng {
       color: #999999;
-      width: 500px;
+      width: 100%;
       font-weight: 400;
       font-size: 16px;
     }
     .team_indivi_text1 {
       color: #000000;
-      width: 500px;
+      width: 100%;
       font-weight: 700;
       font-size: 24px;
     }
     .team_indivi_text2 {
       color: #000000;
-      width: 500px;
+      width: 100%;
       font-weight: 500;
       font-size: 16px;
     }
     .team_indivi_text3 {
       color: #999999;
-      width: 500px;
+      width: 100%;
       font-weight: 400;
       font-size: 16px;
     }
