--- a/data/style/about.css
+++ b/data/style/about.css
@@ -133,53 +133,27 @@
     height: 27vh;
     display: flex;
   }
-  .letter-front__blur,
-  .letter-end__blur {
-    opacity: 100%;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-    transition: all 0.5s;
-  }
-  .letter-front__blur:hover {
-    opacity: 0%;
-    filter: blur(6px);
-    -webkit-filter: blur(6px);
-    transition: all 1s;
-  }
+
   .letter-front__Middle {
     margin: 5vh 0;
   }
-
-  .letter-end-row {
+  .letter-end__1,
+  .letter-end__2,
+  .letter-end__3,
+  .letter-end__4 {
     height: 20vh;
-    display: flex;
   }
-  .blurOn {
-    opacity: 0%;
-    filter: blur(6px);
-    -webkit-filter: blur(6px);
-    transition: all 1s ease-in-out;
+  .letter-end__1 .letter-end {
+    margin-right: 10vh;
   }
-  .letter-end__1 {
-    margin-left: -3vw;
+  .letter-end__2 .letter-end {
+    margin-right: -1vh;
   }
-  .letter-end__1 .letter-end__blur {
-    margin-right: 5vw;
+  .letter-end__3 .letter-end:nth-child(2) {
+    margin-right: 20vh;
   }
-  .letter-end__2 {
-    margin-left: 2vw;
-  }
-  .letter-end__2 .letter-end__blur:nth-child(2) {
-    margin-right: 10vw;
-  }
-  .letter-end__3 {
-    margin-left: 5vw;
-  }
-  .letter-end__3 .letter-end__blur:nth-child(4) {
-    margin-right: 15vw;
-  }
-  .letter-end__4 .letter-end__blur {
-    margin-right: 0vw;
+  .letter-end__4 .letter-end:nth-child(4) {
+    margin-right: 20vh;
   }
   /****** 어바웃 인트로 ******/
   .section__about__start div {
@@ -197,54 +171,16 @@
     justify-content: center;
     margin-right: 20px;
   }
-  .section__about__ME {
-    padding-top: 200px;
-  }
   .section__about__MEMO {
-    padding-bottom: 100px;
+    padding-bottom: 200px;
   }
   .section__about__MEMORY {
     padding-top: 150px;
   }
-
   .section__about__text {
-    margin: 1% 0 0 40%;
-    width: 60%;
+    margin: 0 auto;
   }
-  .circle {
-    width: 200px;
-    height: 200px;
-    background: #888;
-    color: #fff;
-    font-size: 3rem;
-    font-weight: bold;
-    border-radius: 200px;
-    text-align: center;
-    line-height: 200px;
-    opacity: 90%;
-    position: relative;
-    top: -150px;
-    left: 50px;
-  }
-  /* .circle:nth-of-type(1) {
-    position: relative;
-    top: -150px;
-    left: 600px;
-  }
-  .circle:nth-of-type(2) {
-    position: relative;
-    top: -150px;
-    left: 50px;
-  }
-  .circle:nth-of-type(3) {
-    position: relative;
-    top: -150px;
-    left: 600px;
-  } */
-  .opening-film {
-    width: 70vw;
-    height: 70vh;
-  }
+
   .section-contents {
     display: flex;
   }
@@ -272,10 +208,13 @@
   }
 }
 @media screen and (max-width: 480px) {
+  
   .section__icon {
     display: none;
   }
   .contents {
+    display: inline-block;
+    text-align:center;
     font-size: 1.2rem;
     line-height: 2.5rem;
   }
