--- a/data/style/open.css
+++ b/data/style/open.css
@@ -7,7 +7,7 @@
     font-family: "Apple SD Gothic NeoB";
   }
 @media screen and (min-width: 480px) {
-    .contents {
+    .open-contents {
         position:relative;
         white-space: nowrap;
         height: 96vh;
@@ -15,7 +15,8 @@
         align-items: center;
         margin: 2vh 0px;
         overflow: hidden;
-        font-size: 1.5rem;
+        font-size: 20rem;
+        width: 100%;
         scroll-behavior: smooth;
     }
     html, body{
@@ -36,23 +37,24 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin: 0 0 0 30px;
+        margin: 0 0 0 3vh;
         height: 96vh;
     }
-    .introduce {
-        font-size: 2.3rem;
-        margin-top: 1.8rem;
+    .open-introduce {
+        font-size: 1.6rem;
     }
     .exhibi{
+        line-height: 4vh;
         margin-top: 4rem;
-        font-size: 3rem;
+        font-size: 1.6rem;
     }
     .open-web{
-        font-size: 6rem;
+        line-height: 8vh;
+        font-size: 8vh;
     }
     .opening-date {
         margin-bottom: 0.8rem;
-        font-size: 2.7rem;
+        font-size: 1.8rem;
     }
     .bolder{
         font-weight: bolder;
@@ -60,12 +62,13 @@
     }
     .opening-time {
         margin-bottom: 1.8rem;
-        font-size: 2.2rem;
+        font-size: 1.6rem;
+        line-height: 1.7rem;
         font-weight: normal;
     }
     .opening-place {
-        margin-bottom: 1rem;
-        font-size: 3rem;
+        font-weight:900;
+        font-size: 6vh;
     }
     
     .letter-front{
@@ -77,13 +80,11 @@
         height: 22vh;
         display: flex;
     }
+
     /*MEMORY 글자 위치*/
     .section__letter-front {
-        position:absolute;
         display: flex;
-        flex-direction: column;
         margin-top:14vh;
-        margin-left: 500px;
     }
     .letter-front__Top {
         margin-left: 400px;
@@ -110,11 +111,11 @@
         margin:0;
         padding:0;
     }
-    .contents{
+    .open-contents{
         display: flex;
         height:92vh;
         flex-direction: column;
-        font-size: 1.2rem;
+        font-size: 3vh;
         width:92vw;
         margin:4vw;
     }
@@ -137,7 +138,7 @@
         width: 100%;
         height:10vh;
     }
-    .introduce{
+    .open-introduce{
         font-size:1rem;
     }
     .exhibi{
@@ -161,3 +162,10 @@
         font-size: 1rem;
     }
 }
+.letter-front__Top,
+  .letter-front__Middle,
+  .letter-front__Bottom {
+    transition: ease 0.7s;
+    height: 27vh;
+    display: flex;
+  }
