--- a/data/style/open.css
+++ b/data/style/open.css
@@ -37,23 +37,25 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 0 0 30px;
+    margin: 0 0 0 3vh;
     height: 96vh;
+    width: 50%;
   }
   .introduce {
-    font-size: 2.3rem;
-    margin-top: 1.8rem;
+    font-size: 1.6rem;
   }
   .exhibi {
-    margin-top: 4rem;
-    font-size: 3rem;
+    line-height: 4vh;
+        margin-top: 4rem;
+        font-size: 1.6rem;
   }
   .open-web {
-    font-size: 6rem;
+    line-height: 8vh;
+        font-size: 8vh;
   }
   .opening-date {
     margin-bottom: 0.8rem;
-    font-size: 2.7rem;
+        font-size: 1.8rem;
   }
   .bolder {
     font-weight: bolder;
@@ -61,12 +63,13 @@
   }
   .opening-time {
     margin-bottom: 1.8rem;
-    font-size: 2.2rem;
-    font-weight: normal;
+        font-size: 1.6rem;
+        line-height: 1.7rem;
+        font-weight: normal;
   }
   .opening-place {
-    margin-bottom: 1rem;
-    font-size: 3rem;
+    font-weight:900;
+    font-size: 6vh;
   }
 
   .letter-front {
