--- a/data/style/style.css
+++ b/data/style/style.css
@@ -4,7 +4,7 @@
 }
 html,
 body {
-  font-size: 10px;
+  font-size: 62.5%;
   font-family: "Spoqa Han Sans Neo", "sans-serif";
   width: 100vw;
   height: 100vh;
