--- a/data/style/team.css
+++ b/data/style/team.css
@@ -139,6 +139,7 @@
       }
       .team_interactive_image_1{
         height: 50vh;
+        width: 37.5vh;
         margin-bottom: 13vh;
       }
       .team_interactive_title {
